--- a/Project/AlarmTypeApp/app/src/main/res/values/strings.xml
+++ b/Project/AlarmTypeApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">AlarmTypeApp</string>
+    <string name="app_name">Tùy chọn báo thức</string>
+    <string name="textViewTitle">Cách tắt báo thức</string>
 </resources>
