--- a/Project/AppBaoThuc/app/src/main/res/values/strings.xml
+++ b/Project/AppBaoThuc/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AppBaoThuc</string>
+    <string name="textViewTitle">Cách tắt báo thức</string>
 </resources>
